# mystique-cli

./: .gitignore  README.md  install-package.sh  plan.md  pyproject.toml  requirements.txt  setup.py
app/: app.py  change_processor.py  file_indexer.py  llm_client.py
docs/: AI assistant architecture.drawio  architecture.drawio  class_diagram.mmd  indexing_concept.drawio  sequence_changes.mmd  sequence_indexing.mmd
src/app/: app.py  change_processor.py  file_indexer.py  llm_client.py
