[tool.poetry]
name = "coda"
version = "0.1"
description = "A general-purpose AI coding assistant."
authors = ["Vitaly Tsaplin"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
openai = "*"
python-dotenv = "*"
requests = "*"
requests_toolbelt = "*"
jsonschema = "*"
backoff = "*"
langchain = "*"
langchain-openai = "*"
tqdm = "*"
chromadb = "*"
colorama = "*"
unidiff = "*"
pygments = "*"
pathspec = "*"
InquirerPy = "*"
tornado = "*"
humps = "*"

[tool.poetry.scripts]
coda = "app.app:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"